force-app/main/default/objects/HealthCloudGA__AccountAccountRelation__c/fields/HealthCloudGA__InverseRelationship__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__InverseRelationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Uniquely identifies the relationship between Account__c and RelatedAccount__c so that it can be referenced by a trigger that creates the inverse relationship record.</description>
    <label>InverseRelationship</label>
    <referenceTo>HealthCloudGA__AccountAccountRelation__c</referenceTo>
    <relationshipLabel>Account Account Relations</relationshipLabel>
    <relationshipName>AccountAccountRelations</relationshipName>
    <type>Lookup</type>
</CustomField>