force-app/main/default/objects/HealthCloudGA__AccountAccountRelation__c/fields/HealthCloudGA__RelatedAccount__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__RelatedAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>RelatedToAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>