force-app/main/default/objects/HealthCloudGA__AccountAccountRelation__c/fields/HealthCloudGA__Role__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Role__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Role</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>HealthCloudGA__ReciprocalRole__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Account Role</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>HealthCloudGA__ReciprocalRole__c</referenceTo>
    <relationshipName>AccountReciprocalRole</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>