force-app/main/default/objects/HealthCloudGA__AccountAccountRelation__c/validationRules/HealthCloudGA__CannotCreateInactiveRecord.validationRule-meta.xml
<ValidationRule>
    <fullName>HealthCloudGA__CannotCreateInactiveRecord</fullName>
    <active>true</active>
    <description>Ensures that a record cannot be created as Inactive</description>
    <errorConditionFormula>AND(ISNEW(),HealthCloudGA__Active__c == false)</errorConditionFormula>
    <errorMessage>A Account-Account Relationship cannot be created as Inactive.</errorMessage>
</ValidationRule>