force-app/main/default/objects/HealthCloudGA__AccountAccountRelation__c/listViews/HealthCloudGA__All.listView-meta.xml
<ListView>
    <fullName>HealthCloudGA__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>